--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Захист інформації</h1>
 
     <a href="lab1/lab1.html">Тема №1 - Шифри заміни</a>
+    <a href="lab2/lab2.html">Тема №2 - Шифр Плейфера та подвійного квадрата</a>
   </body>
 </html>
