Fix lab1 collisions with next lab

--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -24,12 +24,12 @@
 
               <div>
                 <label>Ключ</label>
-                <input name="key" type="number" min="1" onchange="Z.encryptAdditive()">
+                <input name="key" type="number" min="1" onchange="L1.encryptAdditive()">
               </div>
 
               <div>
                 <label>Значення</label>
-                <input name="value" onchange="Z.encryptAdditive()">
+                <input name="value" onchange="L1.encryptAdditive()">
               </div>
 
               <div>
@@ -45,7 +45,7 @@
 
               <div>
                 <label>Значення</label>
-                <input name="value" onchange="Z.decryptAdditive()">
+                <input name="value" onchange="L1.decryptAdditive()">
               </div>
 
               <div>
@@ -67,12 +67,12 @@
 
               <div>
                 <label>Ключ</label>
-                <input name="key" type="number" min="1" onchange="Z.encryptMultiplicative()">
+                <input name="key" type="number" min="1" onchange="L1.encryptMultiplicative()">
               </div>
 
               <div>
                 <label>Значення</label>
-                <input name="value" onchange="Z.encryptMultiplicative()">
+                <input name="value" onchange="L1.encryptMultiplicative()">
               </div>
 
               <div>
@@ -88,7 +88,7 @@
 
               <div>
                 <label>Значення</label>
-                <input name="value" onchange="Z.decryptMultiplicative()">
+                <input name="value" onchange="L1.decryptMultiplicative()">
               </div>
 
               <div>
@@ -110,17 +110,17 @@
 
               <div>
                 <label>Ключ 1</label>
-                <input name="key1" type="number" min="1" onchange="Z.encryptAffine()">
+                <input name="key1" type="number" min="1" onchange="L1.encryptAffine()">
               </div>
 
               <div>
                 <label>Ключ 2</label>
-                <input name="key2" type="number" min="1" onchange="Z.encryptAffine()">
+                <input name="key2" type="number" min="1" onchange="L1.encryptAffine()">
               </div>
 
               <div>
                 <label>Значення</label>
-                <input name="value" onchange="Z.encryptAffine()">
+                <input name="value" onchange="L1.encryptAffine()">
               </div>
 
               <div>
@@ -136,7 +136,7 @@
 
               <div>
                 <label>Значення</label>
-                <input name="value" onchange="Z.decryptAffine()">
+                <input name="value" onchange="L1.decryptAffine()">
               </div>
 
               <div>
@@ -150,7 +150,7 @@
     </main>
 
     <script src="../constants.js"></script>
-    <script src="lab1-cipher.js"></script>
-    <script src="lab1-ui.js"></script>
+    <script src="./lab1-cipher.js"></script>
+    <script src="./lab1-ui.js"></script>
   </body>
 </html>
