--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <body>
     <h1>Захист інформації</h1>
 
-    <a href="lab1/lab1.html">Тема №1 - Шифри заміни</a>
-    <a href="lab2/lab2.html">Тема №2 - Шифр Плейфера та подвійного квадрата</a>
+    <h2>
+      <a href="./lab1/lab1.html">Тема №1 - Шифри заміни</a>
+    </h2>
+
+    <h2>
+      <a href="./lab2/lab2.html">Тема №2 - Шифр Плейфера та подвійного квадрата</a>
+    </h2>
   </body>
 </html>
