Add lab3 (Vigenere)

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <h2>
       <a href="./lab2/lab2.html">Тема №2 - Шифр Плейфера та подвійного квадрата</a>
     </h2>
+
+    <h2>
+      <a href="./lab3/lab3.html">Тема №3 - Шифр Віженера</a>
+    </h2>
   </body>
 </html>
