Rewrite app to use ES6 Modules

--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -149,7 +149,6 @@
       </section>
     </main>
 
-    <script src="./lab1-cipher.js"></script>
-    <script src="./lab1-ui.js"></script>
+    <script src="./lab1-ui.js" type="module"></script>
   </body>
 </html>
