--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -73,7 +73,6 @@
       </section>
     </main>
 
-    <script src="./lab3-cipher.js"></script>
-    <script src="./lab3-ui.js"></script>
+    <script src="./lab3-ui.js" type="module"></script>
   </body>
 </html>
