--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -91,7 +91,6 @@
       </section>
     </main>
 
-    <script src="./lab2-cipher.js"></script>
-    <script src="./lab2-ui.js"></script>
+    <script src="./lab2-ui.js" type="module"></script>
   </body>
 </html>
