Remove *-cipher.js files

--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -149,6 +149,6 @@
       </section>
     </main>
 
-    <script src="./lab1-ui.js" type="module"></script>
+    <script src="lab1.js" type="module"></script>
   </body>
 </html>
