Add Vigenere's table

--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -60,6 +60,10 @@
             </form>
           </article>
         </section>
+
+        <section style="margin-top: 8px;">
+          <table id="table"></table>
+        </section>
       </section>
     </main>
 
