Add cipher table to vigenere

--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -61,7 +61,13 @@
           </article>
         </section>
 
-        <section style="margin-top: 8px;">
+        <h3 style="margin-top: 8px;">Таблиця шифра</h3>
+        <section>
+          <table id="cipherTable"></table>
+        </section>
+
+        <h3 style="margin-top: 8px;">Таблиця Віженера</h3>
+        <section>
           <table id="table"></table>
         </section>
       </section>
