Lab 4 - Add transposition cipher

--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
     <h2>
       <a href="./lab3/lab3.html">Тема №3 - Шифр Віженера</a>
     </h2>
+
+    <h2>
+      <a href="./lab4/lab4.html">Тема №4 - Шифри перестановки</a>
+    </h2>
   </body>
 </html>
