Change all inputs from disabled to readonly

--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -34,7 +34,7 @@
 
               <div>
                 <label>Результат</label>
-                <input name="result" disabled>
+                <input name="result" readonly>
               </div>
             </form>
           </article>
@@ -50,7 +50,7 @@
 
               <div>
                 <label>Результат</label>
-                <textarea name="result" disabled></textarea>
+                <textarea name="result" readonly></textarea>
               </div>
             </form>
           </article>
@@ -77,7 +77,7 @@
 
               <div>
                 <label>Результат</label>
-                <input name="result" disabled>
+                <input name="result" readonly>
               </div>
             </form>
           </article>
@@ -93,7 +93,7 @@
 
               <div>
                 <label>Результат</label>
-                <textarea name="result" disabled></textarea>
+                <textarea name="result" readonly></textarea>
               </div>
             </form>
           </article>
@@ -125,7 +125,7 @@
 
               <div>
                 <label>Результат</label>
-                <input name="result" disabled>
+                <input name="result" readonly>
               </div>
             </form>
           </article>
@@ -141,7 +141,7 @@
 
               <div>
                 <label>Результат</label>
-                <textarea name="result" disabled></textarea>
+                <textarea name="result" readonly></textarea>
               </div>
             </form>
           </article>
