--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -29,7 +29,7 @@
 
               <div>
                 <label>Результат</label>
-                <input name="result" disabled>
+                <input name="result" readonly>
               </div>
             </form>
           </article>
@@ -45,7 +45,7 @@
 
               <div>
                 <label>Результат</label>
-                <textarea name="result" disabled></textarea>
+                <textarea name="result" readonly></textarea>
               </div>
             </form>
           </article>
@@ -67,7 +67,7 @@
 
               <div>
                 <label>Результат</label>
-                <input name="result" disabled>
+                <input name="result" readonly>
               </div>
             </form>
           </article>
@@ -83,7 +83,7 @@
 
               <div>
                 <label>Результат</label>
-                <textarea name="result" disabled></textarea>
+                <textarea name="result" readonly></textarea>
               </div>
             </form>
           </article>
