--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -34,7 +34,7 @@
 
               <div>
                 <label>Результат</label>
-                <input name="result" disabled>
+                <input name="result" readonly>
               </div>
             </form>
           </article>
@@ -55,7 +55,7 @@
 
               <div>
                 <label>Результат</label>
-                <textarea name="result" disabled></textarea>
+                <textarea name="result" readonly></textarea>
               </div>
             </form>
           </article>
