--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     <h2>
       <a href="./lab4/lab4.html">Тема №4 - Шифри перестановки</a>
     </h2>
+
+    <h2>
+      <a href="./lab5/lab5.html">Тема №5 - Системи з відкритим ключем. Криптосистема RSA</a>
+    </h2>
   </body>
 </html>
