Add updatable keys

--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -38,13 +38,18 @@
               </div>
 
               <div>
-                <label>d</label>
-                <input name="d" readonly>
+                <label>n</label>
+                <input name="n" onchange="L5.updateEncryptKeys()">
               </div>
 
               <div>
                 <label>e</label>
-                <input name="e" readonly>
+                <input name="e" onchange="L5.updateEncryptKeys()">
+              </div>
+
+              <div>
+                <label>d</label>
+                <input name="d" onchange="L5.updateEncryptKeys()">
               </div>
 
               <div>
@@ -79,13 +84,18 @@
               </div>
 
               <div>
-                <label>d</label>
-                <input name="d" readonly>
+                <label>n</label>
+                <input name="n" onchange="L5.updateDecryptKeys()">
               </div>
 
               <div>
                 <label>e</label>
-                <input name="e" readonly>
+                <input name="e" onchange="L5.updateDecryptKeys()">
+              </div>
+
+              <div>
+                <label>d</label>
+                <input name="d" onchange="L5.updateDecryptKeys()">
               </div>
 
               <div>
