Add utils file with shared functions

--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -114,6 +114,7 @@
     </main>
 
     <script src="../node_modules/mathjs/dist/math.js"></script>
+    <script src="../utils.js"></script>
     <script src="lab5-cipher.js"></script>
     <script src="lab5-ui.js"></script>
   </body>
