--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -149,6 +149,7 @@
       </section>
     </main>
 
+    <script src="../utils.js"></script>
     <script src="./lab1-cipher.js"></script>
     <script src="./lab1-ui.js"></script>
   </body>
