--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
     <h2>
       <a href="./lab5/lab5.html">Тема №5 - Системи з відкритим ключем. Криптосистема RSA</a>
     </h2>
+
+    <h2>
+      <a href="./lab6/lab6.html">Тема №6 - Електронний цифровий підпис. Алгоритм Ель-Гамаля</a>
+    </h2>
   </body>
 </html>
