--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -53,12 +53,12 @@
               </div>
 
               <div>
-                <label>Публічний ключ</label>
+                <label>Відкритий ключ</label>
                 <input name="publicKey" readonly>
               </div>
 
               <div>
-                <label>Приватний ключ</label>
+                <label>Закритий ключ</label>
                 <input name="privateKey" readonly>
               </div>
             </form>
@@ -99,12 +99,12 @@
               </div>
 
               <div>
-                <label>Публічний ключ</label>
+                <label>Відкритий ключ</label>
                 <input name="publicKey" readonly>
               </div>
 
               <div>
-                <label>Приватний ключ</label>
+                <label>Закритий ключ</label>
                 <input name="privateKey" readonly>
               </div>
             </form>
